# mm-warp

./: .gitignore  COSMIC-SUCCESS.md  Cargo.toml  EXT-IMAGE-COPY-CAPTURE-PLAN.md  INPUT-EVENTS-NEXT.md  ISSUE-23-COMMENT.md  LICENSE  MOUSE-CURSOR-METHODS.md  NEXT-SESSION.md  NEXT-STEPS.md  PIPEWIRE-INPUT-PROPOSAL.md  README.md  SESSION-2025-10-21-FINAL.md  SESSION-2025-10-21-RESUME.md  SESSION-2025-10-21.md  SESSION-COMPLETE-2025-10-21.md  STATUS-READY-FOR-INPUT.md  WAYLAND-SCREENCOPY-IMPL.md  WHY-COSMIC-NEEDS-REMOTEDESKTOP-PORTAL.md  setup-uinput.sh
.review/: prompt-v1.md
mm-warp-client/: Cargo.toml
mm-warp-client/src/: lib.rs  wayland_display.rs
mm-warp-client/tests/: integration_test.rs
mm-warp-common/: Cargo.toml
mm-warp-common/src/: buffer.rs  error.rs  input_event.rs  lib.rs  pixel.rs  stats.rs
mm-warp-server/: Cargo.toml
mm-warp-server/src/: capture.rs  ext_capture.rs  input_event.rs  input_inject.rs  lib.rs  test_ext_available.rs
mm-warp-server/tests/: integration_test.rs
test-ext-available/: Cargo.toml
test-ext-available/src/: main.rs
