[workspace]
members = [
    "mm-warp-server",
    "mm-warp-client",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Video encoding/decoding
ffmpeg-next = "7.0"
