[package]
name = "mm-warp-client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "mm-warp remote desktop client — Wayland display with input forwarding"

[[bin]]
name = "mm-warp-client"
path = "src/bin/client.rs"

[dependencies]
mm-warp-common = { path = "../mm-warp-common" }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Video decoding
ffmpeg-next = { workspace = true }

# Wayland display
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
memmap2 = "0.9"
nix = { version = "0.29", features = ["fs", "mman"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Certificate fingerprinting (TOFU)
sha2 = { workspace = true }
