[package]
name = "mm-warp-common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "mm-warp shared types — resolution, input events, frame buffers"

[dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true }
memmap2 = "0.9"
nix = { version = "0.29", features = ["fs", "mman"] }
