[package]
name = "mm-warp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Wayland dependencies
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# Screen capture
memmap2 = "0.9"

# Certificate generation
rcgen = "0.13"

# Video encoding
ffmpeg-next = { workspace = true }
