[package]
name = "mm-warp-server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "mm-warp remote desktop server — Wayland screen capture over QUIC"

[[bin]]
name = "mm-warp-server"
path = "src/bin/server.rs"

[dependencies]
mm-warp-common = { path = "../mm-warp-common" }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Wayland screen capture (staging feature for ext-image-copy-capture-v1)
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# Shared memory for screen capture
memmap2 = "0.9"
nix = { version = "0.29", features = ["fs", "mman", "hostname"] }

# Certificate generation
rcgen = "0.13"

# Video encoding
ffmpeg-next = { workspace = true }

# Input injection
evdev = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Certificate fingerprinting
sha2 = { workspace = true }

# Constant-time comparison for PIN auth
subtle = "2"

[dev-dependencies]
mm-warp-client = { path = "../mm-warp-client" }

